style2.css
body::-webkit-scrollbar {
    display: none;
  }
body{
    padding: 0;
    margin: 0;
    background-color: #000;
}
.header {
    position: relative; /* make the container positioned relatively */
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 110px;
  background-color: #000;
  box-sizing: border-box;
  overflow: hidden;
  height: 80vh;
}

.path {
  fill: none;
  stroke: #f2f2f2;
  stroke-width: 3px;
}

.path1 {
    stroke-width: 3px;
  stroke-dasharray: 6884;
  animation: drawPath1 5s linear;
  stroke: #FFA8A8;
}

.content1 {
    position: relative; /* make the container positioned relatively */
  display: flex;
  justify-content: space-around;
  align-items: center;
    height: 80vh;
  background-color: black;
}

.content2 {
    margin-top: 0%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 75vh;
    background-color: black;
}
.content4 {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 60vh;
    background-color: black;
}

.path2 {
    stroke-width: 3px;
  stroke: #F6FFA4;
}

.path3 {
    stroke: #B6FFCE;
}

.path4{
    stroke: #FDD7AA;
}

.path5{
    stroke-width: 2px;
    stroke: #F6FFA4;
}

.content2 {
  /* background-image: repeating-linear-gradient(0deg, rgba(255,255,255, 0.25), rgba(255,255,255, 0.25) 1px, transparent 1px, transparent 7px); */
    background-size: 2px;
}

.content3 {
    position: relative; /* make the container positioned relatively */
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 20vh;
  background-color: black;
}

.footer {
  height: 50vh;
  background-color: #000;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

@keyframes drawPath1 {
  0% {
    stroke-dashoffset: 6884;
  }
  100% {
    stroke-dashoffset: 0;
  }
}

@keyframes floating {
  50% {
    transform: translate3d(0, 40px, 0);
  }
}

.scroll-down {
    height: 50px;
    width: 30px;
    border: 2px solid white;
    position: absolute;
    left: 50%;
    bottom: 20px;
    border-radius: 50px;
    cursor: pointer;
  }
  .scroll-down::before,
  .scroll-down::after {
    content: "";
    position: absolute;
    top: 20%;
    left: 50%;
    height: 10px;
    width: 10px;
    transform: translate(-50%, -100%) rotate(45deg);
    border: 2px solid white;
    border-top: transparent;
    border-left: transparent;
    animation: scroll-down 1s ease-in-out infinite;
  }
  .scroll-down::before {
    top: 30%;
    animation-delay: 0.3s;
    /* animation: scroll-down 1s ease-in-out infinite; */
  }
  
  @keyframes scroll-down {
    0% {
      /* top:20%; */
      opacity: 0;
    }
    30% {
      opacity: 1;
    }
    60% {
      opacity: 1;
    }
    100% {
      top: 90%;
      opacity: 0;
    }
  }
  
  .info1{
    font-family: Arial, Helvetica, sans-serif;
    max-width: 400px;
    color: white;
  }

  h1, h2, p{
    color: wheat;
    opacity: 0;
    position: relative;
    bottom: -40px;
    transition: all 0.8s ease-out;
  }

  .show{
    opacity: 1;
    bottom: 0;
  }

  .border {
    height: 6px;
    border: 0;
    background-color: #B6FFCE;
    background-image: -webkit-gradient(linear, left top, right top, from(#B6FFCE), color-stop(25%, #B6FFCE), color-stop(25%, #F6FFA4), color-stop(50%, #F6FFA4), color-stop(50%, #FDD7AA), color-stop(75%, #FDD7AA), color-stop(75%, #FFA8A8), color-stop(100%, #FFA8A8), to(#FFA8A8));
    background-image: linear-gradient(to right, #B6FFCE, #B6FFCE 25%, #F6FFA4 25%, #F6FFA4 50%, #FDD7AA 50%, #FDD7AA 75%, #FFA8A8 75%, #FFA8A8 100%, #FFA8A8 100%);
    background-size: 50% 100%;
  }

.navigation-wrapper {
  position: relative;
}
.navigation-button {
  will-change: transform;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  position: fixed;
  z-index: 3;
  top: 40px;
  right: 100px;
  background: transparent;
  cursor: pointer;
}
.navigation-button .fa {
  border: 2px solid white;
  border-radius: 3px;
  padding: 10px;
    color: white;
}
 
.navigation-menu ul li {
  list-style: none;
  font-family: impact;
  font-weight: 300;
  color: hsl(0,0%,70%);
}
.navigation-menu {
  content: '';
  position: fixed;
  top: 0;
  right: 0;
  width: 50%;
  background: #FFA8A8;
  height: 100%;
  transform: skewX(0deg) translate(100%,0);
  transform-origin: top right;
  transition: all .2s ease-in;
  z-index: 2;
}
.navigation-menu ul {
  transform: skewX(-8deg);
  transform-origin: top left;
  position: fixed;
  right: 120px;
  top: 120px;
  width: 400px;
  text-align: right;
}
.navigation-menu ul li {
  position: relative;
  z-index: 999;
  font-size: 32px;
  color: hsl(0,0%,10%);
  line-height: 64px;
}
.navigation-menu ul li  a {
  border: none;
  color: hsl(0,0%,10%);
  text-decoration: none;
}
.navigation-menu.active {
  transform: skewX(8deg) translate(0,0);
    
}
.navigation-menu li {
  opacity: 0;
  transform: translate(0, 10px);
  transition: all .0s ease-in .3s;
  
}
.navigation-menu.active li {
  opacity: 1;
  transform: translate(0,0);
  transition: all .2s ease-in 0s;
}
.navigation-menu.active li:nth-child(1) {
  transition-delay: .3s;
}
.navigation-menu.active li:nth-child(2) {
  transition-delay: .4s;
}
.navigation-menu.active li:nth-child(3) {
  transition-delay: .5s;
}
.navigation-menu.active li:nth-child(4) {
  transition-delay: .6s;
}
.navigation-menu.active li:nth-child(5) {
  transition-delay: .7s;
}
.navigation-menu.active li:nth-child(6) {
  transition-delay: .8s;
}

.social-links a {
    color: #FFA8A8;
    text-decoration: none;
    font-size: 50px;
    margin: 0 30px;
  }
  
  .social-links a:hover {
    color: #ccc;
  }

